# py_prog_lan_ver

./: README.md  pyvenv.cfg
BVIM/: CMakeLists.txt  readme.md
BVIM/explames/: base_int.cpp  base_var.cpp  binary_op.cpp
BVIM/src/: main.cpp
BVIM/src/Nodes/: BaseBinnaryNode.cpp  BaseBinnaryNode.h  BaseUnaryNode.cpp  BaseUnaryNode.h
BVIM/src/Types/: BVIMIntTypes.h  BaseDataType.cpp  BaseDataType.h  BaseVarTypes.h  TypesINT.cpp  TypesINT.h
Bf_compiller/src/: main.js  main.ts
Bf_compiller/src/Nodes/: MinusNode.js  MinusNode.ts  PlusNode.js
Bf_compiller/src/core/: Analayzer.js  Analayzer.ts  Lexer.js  Lexer.ts  Parser.js  Parser.ts  Token.js  Token.ts  TokenType.js  TokenType.ts
LL_Vcompiller/: CMakeLists.txt
LL_Vcompiller/src/: main.cpp
LL_Vcompiller/src/core/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
LL_Vcompiller/src/core/Token/: Token.h
LL_Vcompiller/src/core/TokenTypes/: TokenTypes.h
Libs/: config.ts
Scripts/: activate  activate.bat  bottle.py
kumir-tsc/: Build.js  package-lock.json  package.json
kumir-tsc/explames/: test.kum
kumir-tsc/scripts/: Runner.js
kumir-tsc/src/: index.js  index.ts
kumir-tsc/src/core/: Token.js  (+3 more)
kumir-tsc/test-bin/: TestCompilleCore.js  TestCompilleCore.ts  test1.ts
kumir-tsc/tests/: test2.js  test2.ts
runtimes/: readme.md
src/: edit_file.weru  lexer.py  main.py  parser.py  test.qwe
src/TokenTypes/: Token.py  TokenType.py
src/config/: config.vconfig  loadconfig.py
test/src/: Lexer.kt  Main.kt  Parser.kt  PlusNode.kt  Token.kt  TokenTypes.kt  data.txt  fileLoader.kt
test/test/: TestLexer.kt
(+9 files in other folders)
